# summate-langchain

./: .gitignore  README.md  config.yaml  hello.py  main.py  pyproject.toml  test.py
app/models/: query_model.py  response_model.py
app/utils/: database_manager.py  get_evaluation.py  store_debug_log.py
backend/: .gitignore  config.yaml  pyproject.toml
backend/app/utils/: get_evaluation.py
test/: test_database_manager.py
