[project]
name = "summate-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.18",
    "langchain-core>=0.3.35",
    "langchain-ollama>=0.2.3",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
]
